fix: play icon on mobile being oversized

--- a/tb-ed-talks/tb-ed-talks.css
+++ b/tb-ed-talks/tb-ed-talks.css
@@ -143,6 +143,7 @@
 
 .play img {
     align-self: center;
+    height: 50%;
 }
 
 @media only screen and (max-width: 768px) {
